Fix body comp nav button alignment

--- a/src/features/body-comp/nav/body-comp-nav-button.module.css
+++ b/src/features/body-comp/nav/body-comp-nav-button.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: calc(var(--spacing) * 2);
 
   flex-grow: 1;
